--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <title>Development</title>
+    <title>Template</title>
     <!-- luckysheet -->
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet/dist/plugins/css/pluginsCss.css' />
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet/dist/plugins/plugins.css' />
@@ -40,7 +40,7 @@
     <div id="app">
         <div class="app-loading">
             <img src="./svg/loading.svg" alt="页面正在加载..." />
-            <div class="app-loading-title">Development</div>
+            <div class="app-loading-title">Template</div>
         </div>
     </div>
     <script type="module" src="./src/main.ts"></script>
