perf(vue-app): 优化

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" name="referrer" content="no-referrer"/>
     <link rel="icon" href="/favicon.ico" />
     <title>Template</title>
     <!-- luckysheet -->
