--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" name="referrer" content="no-referrer"/>
-    <link rel="icon" href="/favicon.ico" />
+    <meta charset="UTF-8" name="referrer" content="no-referrer" />
+    <link rel="icon" href="/logo.png" />
     <title>Template</title>
     <!-- luckysheet -->
     <!-- <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet/dist/plugins/css/pluginsCss.css' />
